# owl

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS  BUILDING.md  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  LTL_GRAMMAR  LTL_GRAMMAR.md  README  README.md  README_DISTRIBUTION.md  TODO-BRANCH.md  autos  build.gradle  build.gradle.kts  plugins.gradle  rabin4.hoa  rabin8.hoa  settings.gradle  settings.gradle.kts  synth
owl-jni/: CMakeLists.txt
owl-jni/examples/: CMakeLists.txt  example.cc
src/main/: CMakeLists.txt
src/main/antlr/: .gitignore  LTLLexer.g4  LTLParser.g4  SPECTRALexer.g4  SPECTRAParser.g4  TLSFLexer.g4  TLSFParser.g4
src/main/c/: owl-client.c
src/main/c/headers/: owlsylvan.h  owltypes.h
src/main/c/include/: owl_types.h
src/main/c/source/: owlsylvan.c
src/main/cpp/example/: CMakeLists.txt  example.cc
src/main/headers/: owl-automaton.h  owl-base.h  owl-formula.h  owl.h  owltypes.h
src/main/java/jhoafparser/extensions/: BooleanExpressions.java  HOAConsumerPrintFixed.java  HOAFParserCCFixed.java  HOAFParserFixed.java  ToStateAcceptanceFixed.java  package-info.java
src/main/java/jsylvan/: JSylvan.java  package-info.java
src/main/java/ltl/: AlphabetVisitor.java  BinaryModalOperator.java  BinaryVisitor.java  BooleanConstant.java  Collections3.java  CompOperator.java  CompOperatorFrequencyG.java  Conjunction.java  ContainsVisitor.java  DefaultConverter.java  Disjunction.java  FOperator.java  Formula.java  FrequencyG.java  GOperator.java  ImmutableObject.java  ImplicationVisitor.java  Lim.java  Literal.java  MOperator.java  ModalOperator.java  PatientSlaveVisitor.java  PropositionalFormula.java  PseudoSubstitutionVisitor.java  ROperator.java  RelevantGFormulaeWithSlaveSuspension.java  SkeletonVisitor.java  TripleVisitor.java  UOperator.java  UnaryModalOperator.java  Visitor.java  VoidVisitor.java  WOperator.java  XOperator.java
src/main/java/ltl/equivalence/: BDDEquivalenceClassFactory.java  EquivalenceClass.java  EquivalenceClassFactory.java  EvaluateVisitor.java  FactoryRegistry.java  JddFactory.java  PropositionVisitor.java  SylvanEquivalenceClassFactory.java  SylvanFactory.java
src/main/java/ltl/parser/: Comparison.java  Grammar.jj  LTLGrammar.jj  LTLParser.java  LTLParserConstants.java  LTLParserTokenManager.java  ParseException.java  Parser.java  ParserConstants.java  ParserTokenManager.java  SimpleCharStream.java  Token.java  TokenMgrError.java
src/main/java/ltl/simplifier/: AggressiveSimplifier.java  ImplicationVisitor.java  ModalSimplifier.java  PseudoSubstitutionVisitor.java  PullupXVisitor.java  PushDownXVisitor.java  Simplifier.java  XFormula.java
src/main/java/ltl/tlsf/: TLSF.java
src/main/java/ltl/tools/: Ltl2FGXU.java
src/main/java/ltl/visitors/: AlphabetVisitor.java  BinaryVisitor.java  Collector.java  ConjunctiveNormalFormVisitor.java  ContainsVisitor.java  DefaultConverter.java  DefaultIntVisitor.java  DefaultVisitor.java  DisjunctiveNormalFormVisitor.java  IntVisitor.java  RestrictToFGXU.java  RestrictToFGXUM.java  SkipVisitor.java  Visitor.java  VoidVisitor.java
src/main/java/omega_automaton/: AbstractFormulaState.java  AbstractProductState.java  Automaton.java  AutomatonState.java  Edge.java  EdgeGeneric.java  EdgeSingleton.java  StoredBuchiAutomaton.java  package-info.java
src/main/java/owl/: Bibliography.java  package-info.java
src/main/java/owl/algorithms/: SCCAnalyser.java  (+2 more)
src/main/java/picocli/: CommandLine.java  package-info.java
src/main/java/translations/: AbstractCommandLineTool.java  AbstractLTLCommandLineTool.java  LTL2Arena.java  LTL2DA.java  LTL2DPA.java  LTL2LDBA.java  LTL2LDBANG.java  LTL2LDGBA.java  LTL2LDGBANG.java  NBA2LDBA.java  Optimisation.java
src/main/javacc/: ltl-grammar.jj
src/main/resources/: libsylvan.dylib
(+1745 files in other folders)
